message PlayerHeros
{
    required int32 UserId = 1;
    required string Heros = 2;
}